Add task pagination and sorting